# is434-ubisoft

./: .gitignore  README.md  environment.yml
analytics/sentiment_analysis/: readme.md  utils.py
analytics/sentiment_analysis/glassdoor/: Playstation Glassdoor Sentiment.xlsx  Ubisoft Glassdoor Sentiment.xlsx
analytics/topic_model/: BERTopic_Big_Data.ipynb  readme.md  requirements.txt  topic_model.ipynb
data-collection/data/: ubisoft_hot_posts.csv
data-collection/glassdoor/: playstation_reviews.csv  ubisoft_reviews.csv
data-collection/glassdoor/dict/: dec.yml  inc.yml  inv.yml  negative.yml  positive.yml  rating.yml
data-collection/reddit/: README.md  r_ubisoft.ipynb  searching_all_subreddits_ubisoft.ipynb  ubisoft_internal.ipynb
data-collection/reddit/data scraping/: ubisoft_external.ipynb  ubisoft_internal.ipynb
data-collection/steam-scrapper/: .env.example  Cargo.toml  CompetitorGameSentimentAnalysis.ipynb  Horizon FW Steam Reviews.csv  comparative_analysis_competitor.ipynb  competitor_game_reviews.ipynb  histogram_sentiments_competitor.ipynb  sentiment-Copy1.ipynb  sentiment.ipynb  ubisoft_vs_competitor.ipynb
data-collection/steam-scrapper/.ipynb_checkpoints/: comparative_analysis_competitor-checkpoint.ipynb  comparative_analysis_ubisoft-checkpoint.ipynb  histogram_sentiments_competitor-checkpoint.ipynb  sentiment-Copy1-checkpoint.ipynb  sentiment-checkpoint.ipynb
data-collection/steam-scrapper/src/: main.rs
data-collection/twitter/: accounts.db  concat.ipynb  readme.md  requirements.txt  sentiment_analysis.ipynb  twitter_scraper.ipynb  utils.py
(+241 files in other folders)
