[package]
name = "steam-scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }